# typed_closures

./: Cargo.toml  Makefile  read.sh
proc/: Cargo.toml
proc/src/: lib.rs  utils.rs
src/: lib.rs  marker.rs
tests/: Cargo.toml  main.rs
tests/src/: main.rs
