[package]
name = "typed_closures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed_closures_proc = { path = "./proc", version = "0.1.0" }

[dev-dependencies]
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }

[workspace]
members = ["proc"]